<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JSR Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="tweet_body">This is the tweet body</string>
    <string name="user_name">User Name</string>
    <string name="user_screenname">\@foo</string>
    <string name="created_at">22m</string>
    <string name="error_network">Error while fetching tweets.</string>
    <string name="error_notext">Please enter text with 140 characters or less.</string>
    <string name="compose_label">Compose</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="tweet_hint">What\'s happening?</string>
    <string name="home">Home</string>
    <string name="home_cap">HOME</string>
    <string name="mentions_cap">MENTIONS</string>
    <string name="tweet">TWEET</string>
    <string name="pull_down">Pull down to refresh...</string>
    <string name="release">Release to refresh...</string>
    <string name="loading">Loading...</string>
    <string name="offline">Offline Mode</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="tweet_title">Tweet</string>
    <string name="retweets">RETWEETS</string>
    <string name="favorites">FAVORITES</string>
    <string name="number">0</string>
    <string name="max_num">140</string>
    <string name="what_happen">What\'s happening?</string>
    <string name="user_fetch_failed">Failed to retrieve user information</string>
    <string name="profile_label">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tagline">Tagline</string>
    <string name="following_default">FOLLOWING</string>
    <string name="following">Following</string>
    <string name="followers_default">FOLLOWERS</string>
    <string name="retweeted">retweeted</string>
    <string name="tweets_cap">TWEETS</string>
    <string name="view_all">View all Tweets</string>
    <string name="title_activity_profile_tweets">Tweets</string>
    <string name="title_activity_users">UsersActivity</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
	<string name="search">Search</string>
</resources>