<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.codepath.apps.basictwitter.TimelineActivity" >

	<item
	    android:id="@+id/action_message"
	    android:orderInCategory="2"
	    android:title="@string/profile_label"
	    android:icon="@drawable/ic_message"
	    android:showAsAction="always"
	    myapp:showAsAction="always" />
	<item
	    android:id="@+id/action_profile"
	    android:orderInCategory="3"
	    android:title="@string/profile_label"
	    android:icon="@drawable/ic_profile"
	    android:showAsAction="always"
	    myapp:showAsAction="always" />
	<item
	    android:id="@+id/action_compose"
	    android:orderInCategory="5"
	    android:title="@string/compose_label"
	    android:icon="@drawable/ic_action_twitter_compose_1"
	    android:showAsAction="always"
	    myapp:showAsAction="always" />
	<item
	    android:id="@+id/action_search"
	    android:orderInCategory="7"
	    android:title="@string/search"
	    android:icon="@drawable/ic_search"
	    myapp:showAsAction="always|collapseActionView" 
	    myapp:actionViewClass="android.support.v7.widget.SearchView"/>

</menu>
