<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >
	<RelativeLayout
	    android:id="@+id/rlHeader"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true">
	    <ImageView
	        android:id="@+id/ivProfileImage"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginRight="10dp"
	        android:src="@android:drawable/screen_background_light_transparent"/>
	    <TextView
	        android:id="@+id/tvName"
	        android:layout_width ="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/ivProfileImage"
	        android:text="@string/profile_label"
	        android:textSize = "16sp" />
	    <TextView
	        android:id="@+id/tvTagline"
	        android:layout_width ="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_alignLeft="@+id/tvName"
			android:layout_below="@+id/tvName"
	        android:text="@string/tagline"
	        android:textSize ="12sp" />
	</RelativeLayout>
	<LinearLayout
	    android:id="@+id/llCounts"
	    android:layout_below="@+id/rlHeader"
	    android:layout_marginBottom="10dp"
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	    <TextView 
	        android:id="@+id/tvFollowers"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	        android:text="@string/followers_default"/>
	    <TextView 
	        android:id="@+id/tvFollowing"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_marginLeft="20dp"
	        android:text="@string/following_default"/>	    
	</LinearLayout>
	<FrameLayout
	    android:id="@+id/flUserTimeline" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/llCounts" />

</RelativeLayout>
