<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="wrap_content" >
    
   <EditText
        android:id="@+id/etText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:textColor="#000"
        android:hint="@string/what_happen"
        android:textSize="15sp"
        android:inputType="text" />

   <Button
       android:id="@+id/btnTweet"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_below="@+id/etText"
       android:layout_marginTop="10dp"
       android:background="@android:color/transparent"
       android:textColor="#00aced"
       android:text="@string/tweet" />
    <View
        android:id="@+id/vertical_line"
        android:layout_width="1dp"
        android:layout_height="wrap_content" 
        android:layout_alignTop="@+id/btnTweet"
        android:layout_alignBottom="@+id/btnTweet"
        android:layout_toLeftOf="@+id/btnTweet"
        android:layout_marginRight="5dp"
        android:background="#888" />
   <TextView
       android:id="@+id/tvCharCount"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/btnTweet"
       android:layout_alignBottom="@+id/btnTweet"
       android:layout_marginRight="20dp"
       android:layout_toLeftOf="@+id/btnTweet"
       android:textColor= "#888"
       android:text="@string/max_num" />

</RelativeLayout>
